GNOME Bugzilla – Bug 763047
libecal criticals on startup
Last modified: 2017-04-17 18:20:35 UTC
Created attachment 323003 [details] gdb output I get a lot of these on startup: libecal-CRITICAL **: e_cal_recur_generate_instances_sync: assertion 'icaltime_compare (interval_start, interval_end) < 0' failed Attached some gdb output. The printed variables are interval_start & _end. Which is odd, since they should return 0 reading icaltime_compare. Should the interval_{start,end} be 0 to 0 to begin with anyways?
*** Bug 763660 has been marked as a duplicate of this bug. ***
Is this still happening? I can't reproduce it on my jhbuild running on F23.
Still happening on gnome-calendar-3.20.0-1.fc24.x86_64. Haven't tested jhbuild.
*** Bug 769828 has been marked as a duplicate of this bug. ***
Created attachment 336844 [details] [review] e-cal-data-model: fix critical due invalid time range libecal-CRITICAL **: e_cal_recur_generate_instances_sync: assertion 'icaltime_compare (interval_start, interval_end) < 0' failed
Attachment 336844 [details] pushed as c0ed70f - e-cal-data-model: fix critical due invalid time range