e-cal-data-model: fix critical due invalid time range

libecal-CRITICAL **: e_cal_recur_generate_instances_sync: assertion
'icaltime_compare (interval_start, interval_end) < 0' failed

https://bugzilla.gnome.org/show_bug.cgi?id=763047